[gd_scene load_steps=7 format=2]

[ext_resource path="res://SoundNovelText.tres" type="DynamicFont" id=1]
[ext_resource path="res://GameMenu.gd" type="Script" id=2]

[sub_resource type="Theme" id=2]
default_font = ExtResource( 1 )

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = ExtResource( 1 )

[node name="GameMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.854902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="ColorRect"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -448.0
margin_top = 64.0
margin_right = 448.0
margin_bottom = -56.0
theme = SubResource( 2 )
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="バックログ" type="Tabs" parent="ColorRect/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 57.0
margin_right = -4.0
margin_bottom = -4.0
theme = SubResource( 1 )

[node name="BackLog" type="RichTextLabel" parent="ColorRect/TabContainer/バックログ"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -424.0
margin_top = 8.0
margin_right = 424.0
margin_bottom = -12.0

[node name="ゲームデータ" type="Tabs" parent="ColorRect/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 57.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/TabContainer/ゲームデータ"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 36.0
margin_top = 32.0
margin_right = -36.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="ColorRect/TabContainer/ゲームデータ/VBoxContainer2"]
margin_right = 816.0
margin_bottom = 45.0

[node name="Save1Button" type="Button" parent="ColorRect/TabContainer/ゲームデータ/VBoxContainer2/VBoxContainer"]
margin_right = 110.0
margin_bottom = 45.0
theme = SubResource( 3 )
text = "セーブ1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Label" parent="ColorRect/TabContainer/ゲームデータ/VBoxContainer2/VBoxContainer"]
margin_left = 114.0
margin_top = 3.0
margin_right = 411.0
margin_bottom = 42.0
theme = SubResource( 4 )
text = "現在工事中で使えません"

[node name="Load1Button2" type="Button" parent="ColorRect/TabContainer/ゲームデータ/VBoxContainer2/VBoxContainer"]
margin_left = 415.0
margin_right = 508.0
margin_bottom = 45.0
theme = SubResource( 3 )
text = "ロード"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="HBoxContainer" parent="ColorRect/TabContainer/ゲームデータ/VBoxContainer2"]
margin_top = 49.0
margin_right = 816.0
margin_bottom = 94.0

[node name="Save1Button" type="Button" parent="ColorRect/TabContainer/ゲームデータ/VBoxContainer2/VBoxContainer2"]
margin_right = 110.0
margin_bottom = 45.0
theme = SubResource( 3 )
text = "セーブ2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Label" parent="ColorRect/TabContainer/ゲームデータ/VBoxContainer2/VBoxContainer2"]
margin_left = 114.0
margin_top = 3.0
margin_right = 411.0
margin_bottom = 42.0
theme = SubResource( 4 )
text = "現在工事中で使えません"

[node name="Load1Button2" type="Button" parent="ColorRect/TabContainer/ゲームデータ/VBoxContainer2/VBoxContainer2"]
margin_left = 415.0
margin_right = 508.0
margin_bottom = 45.0
theme = SubResource( 3 )
text = "ロード"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="設定" type="Tabs" parent="ColorRect/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 57.0
margin_right = -4.0
margin_bottom = -4.0

[node name="textspeed" type="Label" parent="ColorRect/TabContainer/設定"]
anchor_left = 0.037
anchor_top = 0.064
anchor_right = 0.055
anchor_bottom = 0.064
text = "テキストの速度"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="ColorRect/TabContainer/設定/textspeed"]
anchor_left = 0.284
anchor_top = 0.065
anchor_right = 0.422
anchor_bottom = 0.092
margin_left = 165.324
margin_top = -1.535
margin_right = 235.242
margin_bottom = 13.412
rect_scale = Vector2( 2, 2 )
min_value = 1.0
max_value = 10.0
value = 2.0
rounded = true
tick_count = 1
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resolutions" type="Label" parent="ColorRect/TabContainer/設定"]
anchor_left = 0.037
anchor_top = 0.064
anchor_right = 0.055
anchor_bottom = 0.064
margin_left = 3.144
margin_top = 76.504
margin_right = 149.16
margin_bottom = 115.504
text = "画面のサイズ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1280_720" type="Button" parent="ColorRect/TabContainer/設定/Resolutions"]
margin_left = 184.0
margin_right = 336.0
margin_bottom = 45.0
text = "1280*720"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1600_900" type="Button" parent="ColorRect/TabContainer/設定/Resolutions"]
margin_left = 352.0
margin_right = 504.0
margin_bottom = 45.0
text = "1600*900"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1920_1080" type="Button" parent="ColorRect/TabContainer/設定/Resolutions"]
margin_left = 520.0
margin_right = 682.0
margin_bottom = 45.0
text = "1920*1080"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreen" type="Button" parent="ColorRect/TabContainer/設定/Resolutions"]
margin_left = 696.0
margin_right = 837.0
margin_bottom = 45.0
text = "FullScreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="ColorRect/TabContainer/設定"]
anchor_left = 0.037
anchor_top = 0.22
anchor_right = 0.055
anchor_bottom = 0.22
margin_left = 3.144
margin_top = 72.42
margin_right = 215.16
margin_bottom = 117.42
text = "ゲームを終了する"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ColorRect/TabContainer/設定/Resolutions/1280_720" to="." method="_on_1280_720_pressed"]
[connection signal="pressed" from="ColorRect/TabContainer/設定/Resolutions/1600_900" to="." method="_on_1600_900_pressed"]
[connection signal="pressed" from="ColorRect/TabContainer/設定/Resolutions/1920_1080" to="." method="_on_1920_1080_pressed"]
[connection signal="pressed" from="ColorRect/TabContainer/設定/Resolutions/FullScreen" to="." method="_on_FullScreen_pressed"]
[connection signal="pressed" from="ColorRect/TabContainer/設定/QuitButton" to="." method="_on_QuitButton_pressed"]
